# tachyon-prism

./: .gitignore  .tool-versions  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  architecture.zh-CN.md  development.md  development.zh-CN.md  getting-started.md  getting-started.zh-CN.md  ipc.md  ipc.zh-CN.md
scripts/: build-release.ps1  prism_native_window_smoke.ps1  prism_ui_smoke.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/domain/: configDrafts.ts  coreApi.ts  desktopConfig.ts  gameProfiles.ts  i18n.ts  plugins.ts  runtime.ts  subscriptions.ts  tauri.ts  telemetry.ts
src/domain/__tests__/: configDrafts.test.ts  gameProfiles.test.ts  plugins.test.ts  subscriptions.live.test.ts  subscriptions.test.ts  tauri.test.ts  telemetry.test.ts
