[package]
name = "tachyon-prism"
version = "0.1.0"
description = "Tachyon Prism desktop client"
authors = ["Tachyon Contributors"]
edition = "2021"

[lib]
name = "tachyon_prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
sha2 = "0.11.0"
